--- a/src/templates/account-own-edit-avatar.html
+++ b/src/templates/account-own-edit-avatar.html
@@ -8,21 +8,18 @@
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 </div>
 <div class="colblock_right">
-	<div class="rowitem"><a>Edit Password</a></div>
+	<div class="rowitem"><a>Edit Avatar</a></div>
 </div>
+{{ if .CurrentUser.HasAvatar }}
 <div class="colblock_right">
-	<form action="/user/edit/critical/submit/" method="post">
+	<div class="rowitem"><img src="{{.CurrentUser.Avatar}}" height="128px" max-width="128px" /></div>
+</div>
+{{end}}
+<div class="colblock_right">
+	<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
 		<div class="formrow">
-			<div class="formitem"><a>Current Password</a></div>
-			<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" /></div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><a>New Password</a></div>
-			<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" /></div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><a>Confirm Password</a></div>
-			<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" /></div>
+			<div class="formitem"><a>Upload Avatar</a></div>
+			<div class="formitem"><input name="account-avatar" type="file" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="account-button" class="formbutton">Update</div></div>
