--- a/src/templates/account-own-edit-success.html
+++ b/src/templates/account-own-edit-success.html
@@ -1,9 +1,17 @@
 {{template "header.html" . }}
 <div class="alert_success">Your data was successfully updated</div>
-<div class="rowblock">
+<div class="colblock_left">
+	<div class="rowitem"><a>My Account</a></div>
+	<div class="rowitem passive"><a href="/user/edit/critical/">Edit Password</a></div>
+	<div class="rowitem passive"><a href="/user/edit/avatar/">Edit Avatar</a></div>
+	<div class="rowitem passive"><a>Coming Soon</a></div>
+	<div class="rowitem passive"><a>Coming Soon</a></div>
+	<div class="rowitem passive"><a>Coming Soon</a></div>
+</div>
+<div class="colblock_right">
 	<div class="rowitem"><a>Edit Password</a></div>
 </div>
-<div class="rowblock">
+<div class="colblock_right">
 	<form action="/user/edit/critical/submit/" method="post">
 		<div class="formrow">
 			<div class="formitem"><a>Current Password</a></div>
