You can now change your username. You can now control which route the home page will be mapped to via config.go Added the parse_message function for future purposes. Improved the topic list.

--- a/src/templates/topics.html
+++ b/src/templates/topics.html
@@ -3,8 +3,8 @@
 	<div class="rowitem"><a>Topic List</a></div>
 </div>
 <div class="rowblock">
-	{{range .ItemList}}<div class="rowitem">
-		<a href="/topic/{{.ID}}">{{.Title}}</a> <span class="topic_status topic_status_{{.Status}}"></span>
+	{{range .ItemList}}<div class="rowitem passive"{{ if .Avatar }} style="background-image: url({{ .Avatar }});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 72px;"{{end}}>
+		<a href="/topic/{{.ID}}">{{.Title}}</a> {{if .Is_Closed}}<span class="topic_status topic_status_closed">closed</span>{{else}}<span class="topic_status topic_status_open">open</span>{{end}}
 	</div>{{end}}
 </div>
 {{template "footer.html" . }}
