--- a/src/templates/account-own-edit-avatar.html
+++ b/src/templates/account-own-edit-avatar.html
@@ -2,6 +2,7 @@
 <div class="colblock_left">
 	<div class="rowitem"><a>My Account</a></div>
 	<div class="rowitem passive"><a href="/user/edit/avatar/">Edit Avatar</a></div>
+	<div class="rowitem passive"><a href="/user/edit/username/">Edit Username</a></div>
 	<div class="rowitem passive"><a href="/user/edit/critical/">Edit Password</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
