--- a/src/templates/account-own-edit-username.html
+++ b/src/templates/account-own-edit-username.html
@@ -9,21 +9,17 @@
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 </div>
 <div class="colblock_right">
-	<div class="rowitem"><a>Edit Password</a></div>
+	<div class="rowitem"><a>Edit Username</a></div>
 </div>
 <div class="colblock_right">
-	<form action="/user/edit/critical/submit/" method="post">
+	<form action="/user/edit/username/submit/" method="post">
 		<div class="formrow">
-			<div class="formitem"><a>Current Password</a></div>
-			<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" /></div>
+			<div class="formitem"><a>Current Username</a></div>
+			<div class="formitem">{{.Something}}</div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><a>New Password</a></div>
-			<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" /></div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><a>Confirm Password</a></div>
-			<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" /></div>
+			<div class="formitem"><a>New Username</a></div>
+			<div class="formitem"><input name="account-new-username" type="text" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="account-button" class="formbutton">Update</div></div>
