Added the forums. Added the forum list. Added the forum view. Added a relative time utility function.

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -1,6 +1,7 @@
 <div class="nav">
 	<ul>
 		<li class="menu_overview"><a href="/">Overview</a></li>
+		<li class="menu_forums"><a href="/forums/">Forums</a></li>
 		<li class="menu_topics"><a href="/">Topics</a></li>
 		<li class="menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
 		{{ if .CurrentUser.Loggedin }}
