Added the ability for admins to create forums :) Banned users can no longer create replies or topics o.o Fixed a bug where forums with no content threw an error. Added report buttons. They don't do anything yet. Is_Admin checks take into account whether the user's group has Is_Admin now.

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -6,6 +6,7 @@
 		<li class="menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
 		{{ if .CurrentUser.Loggedin }}
 		<li class="menu_account"><a href="/user/edit/critical/">My Account</a></li>
+		<li class="menu_account"><a href="/panel/forums/">Panel</a></li>
 		<li class="menu_logout"><a href="/accounts/logout?session={{.CurrentUser.Session}}">Logout</a></li>
 		{{ else }}
 		<li class="menu_register"><a href="/accounts/create/">Register</a></li>
