--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,7 +6,7 @@
 		<li class="menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
 		{{ if .CurrentUser.Loggedin }}
 		<li class="menu_account"><a href="/user/edit/critical/">My Account</a></li>
-		<li class="menu_account"><a href="/panel/forums/">Panel</a></li>
+		{{ if .CurrentUser.Is_Admin}}<li class="menu_account"><a href="/panel/forums/">Panel</a></li>{{end}}
 		<li class="menu_logout"><a href="/accounts/logout?session={{.CurrentUser.Session}}">Logout</a></li>
 		{{ else }}
 		<li class="menu_register"><a href="/accounts/create/">Register</a></li>
