--- a/templates/topic.html
+++ b/templates/topic.html
@@ -21,23 +21,25 @@
 	</form>
 </div>
 <div class="rowblock">
-	<div class="rowitem passive editable_parent" style="border-bottom: none;{{ if .Something.Avatar }}background-image: url({{ .Something.Avatar }}), url(/static/white-dot.jpg);background-position: top left;background-repeat: no-repeat, repeat-y;background-size: 128px;padding-left: 136px;{{.Something.Css}}{{end}}">
+	<div class="rowitem passive editable_parent" style="border-bottom: none;{{ if .Something.Avatar }}background-image: url({{ .Something.Avatar }}), url(/static/white-dot.jpg);background-position: 0px {{if le .Something.ContentLines 5}}-1{{end}}0px;background-repeat: no-repeat, repeat-y;background-size: 128px;background-attachment: scroll;padding-left: 136px;{{.Something.Css}}{{end}}">
 		<span class="hide_on_edit topic_content">{{.Something.Content}}</span>
 		<textarea name="topic_content" class="show_on_edit topic_content_input">{{.Something.Content}}</textarea>
 		<br /><br />
-		<a class="username">{{.Something.CreatedByName}}<a/>
+		<a href="/user/{{.Something.CreatedBy}}" class="username">{{.Something.CreatedByName}}</a>
+		{{if .Something.Tag}}<a class="username" style="float: right;">{{.Something.Tag}}</a>{{end}}
 	</div>
 </div><br />
 <div class="rowblock" style="overflow: hidden;">
 	{{range $index, $element := .ItemList}}
-	<div class="rowitem passive deletable_block editable_parent" style="{{ if $element.Avatar }}background-image: url({{$element.Avatar}}), url(/static/white-dot.jpg);background-position: top left;background-repeat: no-repeat, repeat-y;background-size: 128px;padding-left: 136px;{{$element.Css}}{{end}}">
+	<div class="rowitem passive deletable_block editable_parent" style="{{ if $element.Avatar }}background-image: url({{$element.Avatar}}), url(/static/white-dot.jpg);background-position: 0px {{if le $element.ContentLines 5}}-1{{end}}0px;background-repeat: no-repeat, repeat-y;background-size: 128px;background-attachment: scroll;padding-left: 136px;{{$element.Css}}{{end}}">
 		<span class="editable_block">{{$element.ContentHtml}}</span>
 		<br /><br />
-		<a class="username">{{$element.CreatedByName}}</a>
+		<a href="/user/{{$element.CreatedBy}}" class="username">{{$element.CreatedByName}}</a>
 		{{if $.CurrentUser.Is_Admin}}<a href="/reply/edit/submit/{{$element.ID}}"><button class="username edit_item">Edit</button></a>
 		<a href="/reply/delete/submit/{{$element.ID}}"><button class="username delete_item">Delete</button></a>{{end}}
 		<a href="/reply/report/submit/{{$element.ID}}"><button class="username report_item">Report</button></a>
-	</div>{{ end }}
+		{{if $element.Tag}}<a class="username" style="float: right;">{{$element.Tag}}</a>{{end}}
+	</div>{{end}}
 </div>
 {{if not .CurrentUser.Is_Banned}}
 <div class="rowblock">
