Added the ability to assign users as moderators without also giving them the administrative tools. Profile owners can now moderate their own profiles. Fixed an issue with database entries being set as null. A message now appears when there aren't any topics in a forum or in the global topics list. Added the link to the current user's profile to the main menu.
Database Changes.
not nulled some columns.
Added is_mod column to users_groups.
Added the Moderator usergroup.

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -7,4 +7,9 @@
 		<a href="/topic/{{.ID}}">{{.Title}}</a> {{if .Is_Closed}}<span class="topic_status topic_status_closed">closed</span>{{else}}<span class="topic_status topic_status_open">open</span>{{end}}
 	</div>{{end}}
 </div>
+{{if .Something}}
+<div class="rowblock">
+	<div class="rowitem passive">{{.Something}}</div>
+</div>
+{{end}}
 {{template "footer.html" . }}
