Added emojis. The emoji picker is coming soon, as is the font file. More emojis coming soon ^_^ Added the ability to ban and unban users.
Improved the installation instructions.
Changed the collation of the tables from utf8_general_ci to utf8mb4_general_ci.
Changed the group ID order.
Custom pages are now templates rather than little snippets being inserted into a template.
Changed the collation of the driver to utf8mb4_general_ci.
Added a default_group config setting.
Ban flag is overwritten for admins and super mods.

--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,25 @@ body
 	font-family: arial;
 }
 
+@font-face {
+	font-family: 'EmojiFont';
+	src: url('https://github.com/Ranks/emojione/raw/master/assets/fonts/emojione-svg.woff2') format('woff2'),
+	url('https://github.com/Ranks/emojione/raw/master/assets/fonts/emojione-svg.woff') format('woff'), local("arial");
+}
+
+@supports (-ms-ime-align:auto) {
+.user_content
+{
+	font-family: EmojiFont, arial;
+}
+}
+@-moz-document url-prefix() {
+.user_content
+{
+	font-family: EmojiFont, arial;
+}
+}
+
 ul
 {
 	border: 1px solid #ccc;
