Added URL tags & the settings system. Moved the database logic out of main.go and into mysql.go Tweaked the CSS. Banned users can no longer log out.

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem"><a>Password</a></div>
-			<div class="formitem"><input name="password" type="password" placeholder="*****" /></div>
+			<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="login-button" class="formbutton">Login</div></div>
