--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colblock_left" style="max-width: 220px;margin-right: 8px;">
+<div class="colblock_left" style="max-width: 220px;">
 	<div class="rowitem" style="padding: 0;"><img src="{{.Something.Avatar}}" style="max-width: 100%;margin: 0;"/></div>
 	<div class="rowitem">{{.Something.Name}}</div>
 	<div class="rowitem passive">
