--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem"><a>Password</a></div>
-			<div class="formitem"><input name="password" type="password" placeholder="*****" /></div>
+			<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><a>Confirm Password</a></div>
