--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,7 +7,7 @@
 		{{ if .CurrentUser.Loggedin }}
 		<li class="menu_account"><a href="/user/edit/critical/">Account</a></li>
 		<li class="menu_account"><a href="/user/{{.CurrentUser.ID}}">Profile</a></li>
-		{{ if .CurrentUser.Is_Admin}}<li class="menu_account"><a href="/panel/forums/">Panel</a></li>{{end}}
+		{{ if .CurrentUser.Is_Super_Mod}}<li class="menu_account"><a href="/panel/forums/">Panel</a></li>{{end}}
 		<li class="menu_logout"><a href="/accounts/logout?session={{.CurrentUser.Session}}">Logout</a></li>
 		{{ else }}
 		<li class="menu_register"><a href="/accounts/create/">Register</a></li>
