Added the plugin system. Added the report system. Rebranded the project. Improved the installation instructions. Changed the open / close status CSS.
Added the Hello World plugin.
Added the Skeleton plugin.

--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -3,6 +3,8 @@
 	<div class="rowitem"><a>Control Panel</a></div>
 	<div class="rowitem passive"><a href="/panel/forums/">Forums</a></div>
 	<div class="rowitem passive"><a href="/panel/settings/">Settings</a></div>
+	<div class="rowitem passive"><a href="/panel/plugins/">Plugins</a></div>
+	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a href="/forum/-1">Reports</a></div>
