--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -3,6 +3,8 @@
 	<div class="rowitem"><a>Control Panel</a></div>
 	<div class="rowitem passive"><a href="/panel/forums/">Forums</a></div>
 	<div class="rowitem passive"><a href="/panel/settings/">Settings</a></div>
+	<div class="rowitem passive"><a href="/panel/plugins/">Plugins</a></div>
+	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a href="/forum/-1">Reports</a></div>
