--- a/templates/panel-setting.html
+++ b/templates/panel-setting.html
@@ -4,6 +4,8 @@
 	<div class="rowitem passive"><a href="/panel/forums/">Forums</a></div>
 	<div class="rowitem passive"><a href="/panel/settings/">Settings</a></div>
 	<div class="rowitem passive"><a href="/panel/plugins/">Plugins</a></div>
+	<div class="rowitem passive"><a href="/panel/users/">Users</a></div>
+	<div class="rowitem passive"><a href="/panel/groups/">Groups</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
 	<div class="rowitem passive"><a>Coming Soon</a></div>
