--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,13 +1,15 @@
 {{template "header.html" . }}
 <div class="colblock_left" style="max-width: 220px;">
 	<div class="rowitem" style="padding: 0;"><img src="{{.Something.Avatar}}" style="max-width: 100%;margin: 0;"/></div>
-	<div class="rowitem">{{.Something.Name}}</div>
+	<div class="rowitem" style="text-transform: capitalize;">
+	<span style="font-size: 18px;">{{.Something.Name}}</span>{{if .Something.Tag}}<span class="username" style="float: right;">{{.Something.Tag}}</span>{{end}}
+	</div>
 	<div class="rowitem passive">
 		<a class="username">Add Friend</a>
 		{{if (.CurrentUser.Is_Super_Mod) and not (.Something.Is_Super_Mod) }}
 		{{if .Something.Is_Banned }}<a href="/users/unban/{{.Something.ID}}" class="username">Unban</a>{{else}}<a href="/users/ban/{{.Something.ID}}" class="username">Ban</a>{{end}}
 		{{end}}
-		<a class="username">Report</a>
+		<a href="/report/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}&type=user" class="username report_item">Report</a>
 	</div>
 </div>
 <div class="colblock_right">
@@ -21,7 +23,7 @@
 		<a href="/user/{{$element.CreatedBy}}" class="username">{{$element.CreatedByName}}</a>
 		{{if $.CurrentUser.Is_Mod}}<a href="/profile/reply/edit/submit/{{$element.ID}}"><button class="username edit_item">Edit</button></a>
 		<a href="/profile/reply/delete/submit/{{$element.ID}}"><button class="username delete_item">Delete</button></a>{{end}}
-		<a href="/profile/reply/report/submit/{{$element.ID}}"><button class="username report_item">Report</button></a>
+		<a href="/report/submit/{{$element.ID}}?session={{$.CurrentUser.Session}}&type=user-reply"><button class="username report_item">Report</button></a>
 		{{ if $element.Tag }}<a class="username" style="float: right;">{{$element.Tag}}</a>{{end}}
 	</div>{{end}}
 </div>
