--- a/templates/topics.html
+++ b/templates/topics.html
@@ -4,7 +4,9 @@
 </div>
 <div class="rowblock">
 	{{range .ItemList}}<div class="rowitem passive" style="{{ if .Avatar }}background-image: url({{ .Avatar }});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 72px;{{end}}{{ if .Sticky }}background-color: #FFFFCC;{{end}}">
-		<a href="/topic/{{.ID}}">{{.Title}}</a> {{if .Is_Closed}}<span class="topic_status topic_status_closed">closed</span>{{else}}<span class="topic_status topic_status_open">open</span>{{end}}
+		<a href="/topic/{{.ID}}">{{.Title}}</a> {{if .Is_Closed}}<span class="username topic_status_e topic_status_closed" style="float: right;">closed</span>
+		{{else}}<span class="username topic_status_e topic_status_open" style="float: right;">open</span>{{end}}
+		<span class="username" style="border-right: 0;float: right;">Status</span>
 	</div>{{end}}
 </div>
 {{if .Something}}
