--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,10 @@
 			<div class="formitem"><input name="username" type="text" placeholder="Account Name" /></div>
 		</div>
 		<div class="formrow">
+			<div class="formitem"><a>Email</a></div>
+			<div class="formitem"><input name="email" type="email" placeholder="joe.doe@example.com" /></div>
+		</div>
+		<div class="formrow">
 			<div class="formitem"><a>Password</a></div>
 			<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" /></div>
 		</div>
